# OOP---Management-Application-Project

./: .antigravityignore  .gitignore  CMakeLists.txt  README.md  temp_recover.txt
ai-logs/: 25127052_AIUsageLog.md  25127137_AIUsageLog.md
database/: Systems.db
resources/: res.qrc  resources.qrc
resources/styles/: Employee_View_styles.qss  styles.qss
src/: global.h  main.cpp
src/control/: Control_Navigator.cpp  Control_Navigator.h  Dashboard_Control.cpp  Dashboard_Control.h  Employee_Control.cpp  Employee_Control.h  Login_Control.cpp  Login_Control.h  Profile_Control.cpp  Profile_Control.h  Salary_Control.cpp  Salary_Control.h  Schedule_Control.cpp  Schedule_Control.h  main_control.cpp  main_control.h  overview_control.cpp  overview_control.h  viewschedule_control.cpp  viewschedule_control.h
src/core/: Manager.cpp  Manager.h  Optimizer.h  Shift.cpp  Shift.h  ShiftBlock.h  Staff.cpp  Staff.h  User.cpp  User.h  UserFactory.cpp  UserFactory.h
src/model/: Change_password.cpp  Change_password.h  Employee_Model.cpp  Employee_Model.h  Login_Model.cpp  Login_Model.h  Profile_Model.cpp  Profile_Model.h  Salary_Model.cpp  Salary_Model.h  Schedule_Model.cpp  Schedule_Model.h  Shift_Model.cpp  Shift_Model.h  Validator.cpp  Validator.h
src/utils/: Config.h  Database.cpp  Database.h  Optimizer.cpp  Security.cpp  Security.h  SessionManage.cpp  SessionManage.h
src/view/: AddEmployee_Dialog.cpp  AddEmployee_Dialog.h  Dashboard_View.cpp  Dashboard_View.h  Dashboard_View.ui  EditEmployee_Dialog.cpp  EditEmployee_Dialog.h  EditPassword_Widget.cpp  EditPassword_Widget.h  EditProfile_Widget.cpp  EditProfile_Widget.h  Login_View.cpp  Login_View.h  Login_View.ui  Profile_View.cpp  Profile_View.h  Profile_View.ui  Salary_View.cpp  Salary_View.h  Salary_View.ui  Schedule_View.cpp  Schedule_View.h  Schedule_View.ui  View_Navigator.cpp  View_Navigator.h  View_Navigator.ui  employeecard.cpp  employeecard.h  employeecard.ui  employeeswidget.cpp  employeeswidget.h  employeeswidget.ui  main_view.cpp  main_view.h  main_view.ui  overview_view.cpp  overview_view.h  overview_view.ui  sidebar_widget.cpp  sidebar_widget.h  (+4 more)
